--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=
+MONGO_URI="Your mongo uri"
 JWT_SECRET="Anything you like"
-CLOUDINARY_URL=
-CLOUDINARY_UPLOAD_PRESET=
+CLOUDINARY_URL ="your cloudinary url"
+CLOUDINARY_UPLOAD_PRESET = "your cloudinary preset "
