--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI="Your mongo uri"
+MONGO_URI=mongodb://username:password@localhost:27017/yourdatabase
 JWT_SECRET="Anything you like"
 CLOUDINARY_URL ="your cloudinary url"
 CLOUDINARY_UPLOAD_PRESET = "your cloudinary preset "
