--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://6apr1971:debutinykuttu2007@mongoprojmern.lc35z6t.mongodb.net/
+MONGO_URI=mongodb+srv://6apr1971:00gHSEvNOvw8NoSJ@mongoprojmern.lc35z6t.mongodb.net
 JWT_SECRET="Anything you like"
 CLOUDINARY_URL ="your cloudinary url"
 CLOUDINARY_UPLOAD_PRESET = "your cloudinary preset "
