--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "bugs": {
     "url": "https://github.com/DebdiptoBiswas/School-Management-System-mern/issues"
   },
-  "homepage": "https://github.com/DebdiptoBiswas/School-Management-System-mern#readme",
+  "homepage": "https://debdiptobiswas.github.io/School-management-system-mern/",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "gh-pages": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.21",
     "nepali-date-converter": "^3.3.1"
